fix line jump

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -9066,10 +9066,6 @@ body.internal.page-gastronomic-recipes {
     padding: 50px 38px;
   }
 
-  .professionals-value-feature__products-title br {
-    display: none;
-  }
-
   .shop-page-hero {
     min-height: 300px;
   }
